--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="app/resources/icons/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
     <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
 
